--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,20 +2,25 @@ name: tripify_app
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
-  sdk: '>=3.1.5 <4.0.0'
+environment:
+  sdk: ">=3.1.5 <4.0.0"
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.2
   get: 4.6.6
-  flutter: 
+  get_storage: ^2.1.1
+  flutter_svg: ^2.0.9
+  flutter:
     sdk: flutter
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^2.0.0
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
+flutter:
   uses-material-design: true
 
+  assets:
+    - assets/icons/
+    - assets/images/
