--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,3 +24,8 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+
+  fonts:
+    - family: DancingScript
+      fonts:
+        - asset: fonts/DancingScript-VariableFont_wght.ttf
