--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   after_layout: ^1.2.0
   awesome_dialog: ^3.1.0
   http: ^1.1.0
+  provider: 6.1.1 
 
 dev_dependencies:
   flutter_test:
